New tab page mod with boxbub iframe.

--- a/chrome/browser/resources/ntp4/new_tab.css
+++ b/chrome/browser/resources/ntp4/new_tab.css
@@ -95,10 +95,11 @@ body {
 #card-slider-frame {
   /* Must match #footer height. */
   bottom: 50px;
-  overflow: hidden;
+  /*overflow: hidden;
+   */
   /* We want this to fill the window except for the region used
      by footer */
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 100%;
 }
