--- a/bitpop_specific/extensions/dropdown_most_visited/styles.css
+++ b/bitpop_specific/extensions/dropdown_most_visited/styles.css
@@ -1,3 +1,5 @@
+body {margin:0;padding:0;font-family:Helvetica, Arial, sans-serif;width:600px;font-size:13px;overflow:hidden;}
+
 .details {cursor:default;position:relative;}
 .details:hover {background:#cde5ff;}
 .icon {position:absolute;top:4px;left:5px;}
