--- a/chrome/browser/resources/sync_promo/main.css
+++ b/chrome/browser/resources/sync_promo/main.css
@@ -1,7 +1,8 @@
 /* Reset */
 
 body, html {
-	height: 100%;
+	min-width:100%;
+	min-height: 100%;
 	padding: 0;
 	margin: 0;
 	font-family: 'Helvetica Neue', Arial, 'Liberation Sans', FreeSans, sans-serif;
@@ -84,19 +85,19 @@ body.var2 #wrapper .container {
 
 /* Circle */
 
-h2, p {
+#wrapper h2, #wrapper p {
 	color: #fff;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
 }
 
-h2 {
+#wrapper h2 {
 	margin: 0;
 	font-weight: normal;
 	font-size: 35px;
 	line-height: 52px;
 }
 
-p {
+#wrapper p {
 	margin: 0 0 4px;
 	font-size: 24px;
 	line-height: 36px;
@@ -176,4 +177,10 @@ a.button:hover {
 	text-align: left;
 	text-indent: -999em;
 	background: url(chrome://resources/images/btn_fblogin.png) 0 0 no-repeat;
+}
+
+.sync_setup_wrap {
+	left: 0;
+	top: 0;
+	z-index: 10;
 }
