--- a/bitpop_specific/extensions/facebook_friends/css/sidebar.css
+++ b/bitpop_specific/extensions/facebook_friends/css/sidebar.css
@@ -269,3 +269,13 @@ ul.list li:hover span.leftSide {
   font-size: 11px;
   font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
 }
+
+p.promo {
+  font-size: 1.2em;
+}
+
+#sync-para {
+  margin-top: 1em;
+  color: gray;
+}
+
