--- a/chrome/browser/resources/sync_promo/main.css
+++ b/chrome/browser/resources/sync_promo/main.css
@@ -1,7 +1,7 @@
 /* Reset */
 
 body, html {
-	min-width:100%;
+	min-width:800px;
 	min-height: 100%;
 	padding: 0;
 	margin: 0;
@@ -32,7 +32,7 @@ body.var2 #wrapper .container {
 
 .container {
 	position: absolute;
-	width: 100%;
+	min-width: 800px;
 	height: 100%;
 }
 
