--- a/bitpop_specific/extensions/facebook_friends/suppression/facebook_suppressor.css
+++ b/bitpop_specific/extensions/facebook_friends/suppression/facebook_suppressor.css
@@ -36,6 +36,7 @@
     display: none;
 }
 
+/*
 #jewelCase {
     display: none;
     visibility: hidden;
@@ -45,3 +46,4 @@
     display: none;
     visibility: hidden;
 }
+*/
